--- a/src/partials/_index-footer.html
+++ b/src/partials/_index-footer.html
@@ -2,96 +2,11 @@
 style="background-image: url(@@path/assets/landing/images/bg2.jpg); background-color: #212629; background-size: 110%;">
 <div class="container mb-10 pb-3">
     <div class="row justify-content-center cols-md-2 cols-lg-3 mb-10 pb-1">
-        <div class="mb-4">
-            <a class="icon-box shape-overlay appear-animate" data-animation-options="{
-                'name': 'zoomIn', 'delay': '.2s'
-            }" href="documentation.html">
-                <span class="icon-box-icon pt-1 pb-1">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90px"
-                        height="90px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"
-                        xml:space="preserve">
-                        <g>
-                            <path d="M55.701,74.454h-6.063c-1.919,0-3.769,0.601-5.313,1.712v-52.52c0-2.93,2.383-5.313,5.313-5.313h29.726
-v22.224c0,1.048,0.854,1.9,1.9,1.9s1.9-0.853,1.9-1.9V16.434c0-1.048-0.854-1.9-1.9-1.9H49.638c-2.845,0-5.489,1.314-7.213,3.552
-c-1.724-2.237-4.368-3.552-7.213-3.552H2.314c-1.048,0-1.9,0.853-1.9,1.9v59.92c0,1.047,0.853,1.899,1.9,1.899h32.898
-c2.93,0,5.313,2.384,5.313,5.313c0,1.049,0.853,1.901,1.9,1.901c1.048,0,1.9-0.853,1.9-1.901c0-2.929,2.383-5.313,5.313-5.313
-h6.063c1.047,0,1.9-0.853,1.9-1.899C57.602,75.305,56.748,74.454,55.701,74.454z M40.524,76.166
-c-1.543-1.111-3.394-1.712-5.313-1.712H4.213V18.333h30.999c2.93,0,5.313,2.384,5.313,5.313V76.166z" />
-                            <path d="M33.744,25.928H10.896c-1.048,0-1.9,0.853-1.9,1.899c0,1.048,0.852,1.9,1.9,1.9h22.848
-c1.048,0,1.899-0.853,1.899-1.9C35.643,26.78,34.792,25.928,33.744,25.928z" />
-                            <path d="M33.744,34.86H10.896c-1.048,0-1.9,0.852-1.9,1.899s0.852,1.9,1.9,1.9h22.848
-c1.048,0,1.899-0.853,1.899-1.9S34.792,34.86,33.744,34.86z" />
-                            <path d="M33.744,43.792H10.896c-1.048,0-1.9,0.854-1.9,1.899c0,1.048,0.852,1.901,1.9,1.901h22.848
-c1.048,0,1.899-0.854,1.899-1.901C35.643,44.646,34.792,43.792,33.744,43.792z" />
-                            <path d="M72.557,25.928H50.979c-1.047,0-1.9,0.853-1.9,1.899c0,1.048,0.854,1.9,1.9,1.9h21.578
-c1.045,0,1.898-0.853,1.898-1.9C74.455,26.78,73.602,25.928,72.557,25.928z" />
-                            <path d="M74.455,36.76c0-1.048-0.854-1.899-1.898-1.899H50.979c-1.047,0-1.9,0.852-1.9,1.899s0.854,1.9,1.9,1.9
-h21.578C73.602,38.66,74.455,37.808,74.455,36.76z" />
-                            <path d="M50.979,43.792c-1.047,0-1.9,0.854-1.9,1.899c0,1.048,0.854,1.901,1.9,1.901H61.07
-c1.049,0,1.9-0.854,1.9-1.901c0-1.046-0.852-1.899-1.9-1.899H50.979z" />
-                            <path d="M33.744,52.725H10.896c-1.048,0-1.9,0.853-1.9,1.901c0,1.047,0.852,1.899,1.9,1.899h22.848
-c1.048,0,1.899-0.853,1.899-1.899C35.643,53.577,34.792,52.725,33.744,52.725z" />
-                            <path d="M95.877,58.743c-0.152,0-0.307,0.018-0.459,0.056c-1.016,0.254-1.637,1.286-1.383,2.302
-c0.324,1.304,0.488,2.654,0.488,4.011c0,9.121-7.42,16.541-16.541,16.541c-3.355,0-6.59-1.002-9.352-2.897
-c-0.496-0.342-1.152-0.428-1.721-0.223l-3.678,1.329l1.33-3.678c0.207-0.572,0.125-1.217-0.221-1.72
-c-1.896-2.76-2.9-5.995-2.9-9.353c0-9.121,7.422-16.541,16.541-16.541c3.83,0,7.563,1.339,10.512,3.771
-c0.34,0.277,0.768,0.432,1.207,0.432c0.57,0,1.105-0.252,1.469-0.691c0.664-0.808,0.549-2.008-0.26-2.675
-c-3.627-2.989-8.219-4.635-12.928-4.635c-11.215,0-20.34,9.126-20.34,20.34c0,3.783,1.045,7.467,3.023,10.671l-2.383,6.598
-c-0.25,0.689-0.076,1.471,0.441,1.988c0.508,0.507,1.314,0.688,1.99,0.443l6.598-2.384c3.203,1.979,6.887,3.024,10.67,3.024
-c11.215,0,20.34-9.124,20.34-20.341c0-1.666-0.201-3.324-0.602-4.929C97.512,59.335,96.752,58.743,95.877,58.743z" />
-                            <path d="M99.031,49.53c-0.359-0.359-0.838-0.557-1.344-0.557c-0.508,0-0.984,0.198-1.344,0.557L78.133,67.74
-l-8.59-8.592c-0.359-0.359-0.838-0.558-1.346-0.558s-0.984,0.198-1.342,0.558c-0.359,0.358-0.557,0.835-0.557,1.343
-c0,0.51,0.197,0.986,0.557,1.345l9.936,9.935c0.357,0.359,0.836,0.557,1.342,0.557c0.508,0,0.986-0.197,1.344-0.557l19.555-19.554
-c0.357-0.357,0.555-0.834,0.555-1.342S99.389,49.889,99.031,49.53z" />
-                        </g>
-                    </svg>
-                </span>
-                <h3 class="icon-box-title ls-l text-white">Online Documentation</h3>
-            </a>
-        </div>
-        <div class="mb-4">
-            <a class="icon-box shape-overlay appear-animate" data-animation-options="{
-                'name': 'zoomIn', 'delay': '.3s'
-            }" href="documentation.html">
-                <span class="icon-box-icon pt-1 pb-1">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90px"
-                        height="90px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"
-                        xml:space="preserve">
-                        <g>
-                            <path d="M62.02,41.336L44.17,31.079c-0.521-0.299-1.164-0.298-1.687,0.002c-0.522,0.302-0.844,0.859-0.844,1.463l-0.002,20.518
-c0,0.604,0.321,1.16,0.843,1.461c0.262,0.153,0.553,0.229,0.845,0.229c0.291,0,0.582-0.075,0.842-0.225L62.02,44.266
-c0.525-0.302,0.848-0.86,0.848-1.465C62.867,42.195,62.545,41.637,62.02,41.336z M45.015,50.144l0.003-14.682l12.771,7.339
-L45.015,50.144z" />
-                            <path d="M91.09,15.73H8.852c-3.547,0-6.434,2.813-6.434,6.362v55.814c0,3.55,2.886,6.362,6.434,6.362H91.09
-c3.553,0,6.492-2.813,6.492-6.362V22.093C97.582,18.543,94.643,15.73,91.09,15.73z M94.338,77.907c0,1.773-1.473,3.298-3.248,3.298
-H8.852c-1.771,0-3.191-1.524-3.191-3.298V66.353h88.677V77.907z M94.338,63.109H5.661V22.093c0-1.774,1.419-3.299,3.191-3.299
-H91.09c1.775,0,3.248,1.524,3.248,3.299V63.109z" />
-                            <path d="M21.215,75.696h0.988c0.816,0,1.479-0.662,1.479-1.482c0-0.815-0.663-1.479-1.479-1.479h-0.988
-c-0.816,0-1.479,0.664-1.479,1.479C19.736,75.034,20.399,75.696,21.215,75.696z" />
-                            <path d="M11.347,75.696h0.986c0.817,0,1.482-0.662,1.482-1.482c0-0.815-0.665-1.479-1.482-1.479h-0.986
-c-0.819,0-1.482,0.664-1.482,1.479C9.864,75.034,10.528,75.696,11.347,75.696z" />
-                            <path d="M16.28,75.696h0.988c0.82,0,1.48-0.662,1.48-1.482c0-0.815-0.661-1.479-1.48-1.479H16.28c-0.816,0-1.479,0.664-1.479,1.479
-C14.8,75.034,15.463,75.696,16.28,75.696z" />
-                            <path d="M88.713,75.696h0.99c0.814,0,1.479-0.662,1.479-1.482c0-0.815-0.664-1.479-1.479-1.479h-0.99
-c-0.816,0-1.477,0.664-1.477,1.479C87.236,75.034,87.896,75.696,88.713,75.696z" />
-                            <path d="M31.288,75.838h4.192c0.772,2.277,2.908,3.934,5.444,3.934c2.535,0,4.671-1.656,5.443-3.934h35.346
-c0.887,0,1.607-0.733,1.607-1.623c0-0.889-0.721-1.62-1.607-1.62H46.5c-0.631-2.502-2.881-4.366-5.576-4.366
-s-4.947,1.864-5.577,4.366h-4.059c-0.888,0-1.61,0.731-1.61,1.62C29.678,75.104,30.4,75.838,31.288,75.838z M37.702,72.595
-c0.543-1.241,1.782-2.113,3.222-2.113c1.439,0,2.677,0.872,3.222,2.113c0.189,0.431,0.297,0.905,0.297,1.404
-c0,0.676-0.202,1.301-0.533,1.839c-0.62,1.004-1.723,1.681-2.986,1.681c-1.265,0-2.366-0.677-2.986-1.681
-c-0.332-0.538-0.533-1.163-0.533-1.839C37.405,73.5,37.512,73.025,37.702,72.595z" />
-                        </g>
-                    </svg>
-                </span>
-                <h3 class="icon-box-title ls-l text-white">Video Tutorials</h3>
-            </a>
-        </div>
+
         <div class="mb-4">
             <a class="icon-box shape-overlay appear-animate" data-animation-options="{
                 'name': 'zoomIn', 'delay': '.4s'
-            }" href="https://d-themes.com/support">
+            }" href="tel:0742256861">
                 <span class="icon-box-icon pt-2 pb-2">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="80px"
@@ -139,68 +54,26 @@ C18.339,45.615,18.339,41.171,20.075,37.339z" />
                         </g>
                     </svg>
                 </span>
-                <h3 class="icon-box-title ls-l text-white">Support Center</h3>
+                <h3 class="icon-box-title ls-l text-white">
+                    0742-256-861
+                </h3>
             </a>
         </div>
     </div>
-    <h2 class="text-white ls-s font-weight-bold mb-0 appear-animate" data-animation-options="{
+    <h4 class="text-white ls-s font-weight-bold mb-0 appear-animate" data-animation-options="{
             'name': 'fadeInUpShorter', 'delay': '.1s'
-        }">Build your website with Riode</h2>
-    <h3 class="text-white ls-m mb-6 font-weight-normal appear-animate" data-animation-options="{
+        }">
+        Servicii de Outdoor Media prin Panou LED. 
+    </h4>
+    <p class="text-white ls-m mb-6 font-weight-normal appear-animate" data-animation-options="{
             'name': 'fadeInUpShorter', 'delay': '.2s'
-        }">Purchase now,
-        <b class="ls-s appear-animate" data-animation-options="{
-                'name': 'blurIn', 'delay': '.4s'
-            }">Only $19!</b>
-    </h3>
-    <ul
-        class="list d-flex align-items-center justify-content-center text-grey font-weight-semi-bold mb-10 text-uppercase">
-        <li class="mb-2 appear-animate" data-animation-options="{
-            'name': 'blurIn', 'delay': '.3s'
         }">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100"
-                enable-background="new 0 0 100 100" xml:space="preserve">
-                <g>
-                    <polygon
-                        points="46.224,60.709 43.333,60.684 34.528,51.877 37.45,48.957 44.819,56.33 62.513,39.291 65.378,42.266" />
-                </g>
-            </svg>
-            Super high performance
-        </li>
-        <li class="mb-2 appear-animate" data-animation-options="{
-            'name': 'blurIn', 'delay': '.4s'
-        }">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100"
-                enable-background="new 0 0 100 100" xml:space="preserve">
-                <g>
-                    <polygon
-                        points="46.224,60.709 43.333,60.684 34.528,51.877 37.45,48.957 44.819,56.33 62.513,39.291 65.378,42.266" />
-                </g>
-            </svg>
-            Free lifetime updates
-        </li>
-        <li class="mb-2 appear-animate" data-animation-options="{
-            'name': 'blurIn', 'delay': '.5s'
-        }">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 100"
-                enable-background="new 0 0 100 100" xml:space="preserve">
-                <g>
-                    <polygon
-                        points="46.224,60.709 43.333,60.684 34.528,51.877 37.45,48.957 44.819,56.33 62.513,39.291 65.378,42.266" />
-                </g>
-            </svg>
-            Strict coding standards
-        </li>
-    </ul>
-    <a href="https://d-themes.com/buynow/riode.html/"
-        class="btn btn-lg btn-rounded btn-gradient gra-reversed appear-animate" data-animation-options="{
-            'name': 'fadeInUpShorter', 'delay': '.3s'
-        }">Buy Riode Now</a>
+        Alaturi de clientii nostri din 2019
+    </p>
 </div>
 <div class="footer-bottom">
-    <p class="w-100 mb-0">@2021 Riode Template. All Rights Reserved</p>
+    <p class="w-100 mb-0">
+        &copy; CharimaMedia - Toate Drepturile Rezervate.    
+    </p>
 </div>
 </footer>
