--- a/src/partials/_index-head.html
+++ b/src/partials/_index-head.html
@@ -28,3 +28,6 @@
 
 <!-- Main CSS File -->
 <link rel="stylesheet" type="text/css" href="@@path/assets/landing/landing-critical.min.css">
+
+<!-- CUSTOM CSS File -->
+<link rel="stylesheet" type="text/css" href="@@path/assets/custom/custom.css">
