--- a/src/partials/_common-navigation.html
+++ b/src/partials/_common-navigation.html
@@ -7,7 +7,7 @@
                     <i class="d-icon-bars2"></i>
                 </a>
                 <a href="/" class="logo">
-                    <img src="@@path/assets/images/logo.png" alt="logo" width="153" height="44" />
+                    <img src="@@path/assets/custom/images/logo-black.png" alt="logo" width="153" height="44" />
                 </a>
                 <!-- End Logo -->
             </div>
