--- a/src/partials/_faq-scripts.html
+++ b/src/partials/_faq-scripts.html
@@ -6,5 +6,5 @@
     <script src="@@path/assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="@@path/assets/vendor/owl-carousel/owl.carousel.min.js"></script>
     <!-- Main JS File -->
-    <script src="@@path/assets/js/main.min.js"></script>
+    <script src="@@path/assets/js/main.js"></script>
     
