--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -343,7 +343,7 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
                         <li class="appear-animate" data-animation-options="{
                             'name': 'fadeInLeftShorter', 'delay': '.2s'
                         }">
-                            <span>01.</span> Impact Visual Mare</li>
+                            <span>01.</span> Impact Vizual Mare</li>
                         <li class="appear-animate" data-animation-options="{
                             'name': 'fadeInLeftShorter', 'delay': '.4s'
                         }">
@@ -396,22 +396,25 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
             <div class="container pt-9 pb-10 mb-10">
                 <h3 class="text-body font-weight-normal text-uppercase ls-s mb-1 appear-animate"
                     data-animation-options="{ 'name': 'fadeInRightShorter', 'delay': '.2s'}">
-                    Some content here
+                    Motive sa alegi acest tip de publicitate
                 </h3>
                 <h2 class="font-weight-bold ls-s lh-1 mb-8 appear-animate" data-animation-options="{
                     'name': 'fadeInLeftShorter', 'delay': '.3s'}">
-                    Stuff here
+                    Promovare prin Panou LED
                 </h2>
-                <div class="row justify-content-center elements cols-xs-2 cols-md-3 cols-lg-4 cols-xl-5 pb-2">
+                <div class="row justify-content-center elements pb-2">
 
                     <p>
-                        asdasdasd
-                        asdasdasdasdasd
-                        sdfsdfsd
-                        sdfsdfsdf
-                        sdfsdfsdsdf
-                        dsfsdfsdf
+                        Un material VIDEO fiind animat, <strong>atrage atentia</strong> si impactul informatiei asupra auduentei este superior comparativ cu un banner clasic. 
                     </p>
+                    <p>    
+                        <strong>Suprafata de expunere este de 12mp</strong>, o dimensiune care permite o afisare optima a tuturor elementelor grafice. 
+                    </p>
+                    <p>
+                        In ambele orase in case putem oferi acest serviciu (<strong>Cluj</strong>, <strong>Fagaras</strong>) Panourile LED sunt pozitionate 
+                        in zone cu trafic intens ceea ce asigura un flux constant de vizionari.
+                    </p>
+
                 </div>
             </div>
         </section>
