--- a/src/partials/_index-footer.html
+++ b/src/partials/_index-footer.html
@@ -68,7 +68,7 @@ C18.339,45.615,18.339,41.171,20.075,37.339z" />
     <p class="text-white ls-m mb-6 font-weight-normal appear-animate" data-animation-options="{
             'name': 'fadeInUpShorter', 'delay': '.2s'
         }">
-        Alaturi de clientii nostri din 2019
+        Alaturi de clientii nostri din 2019.
     </p>
 </div>
 <div class="footer-bottom">
