--- a/src/partials/_index-scripts.html
+++ b/src/partials/_index-scripts.html
@@ -5,5 +5,5 @@
 	<script src="@@path/assets/vendor/jquery/jquery.min.js"></script>
 	<script src="@@path/assets/landing/landing-plugin.min.js"></script>
 	<!-- Main JS File -->
-	<script src="@@path/assets/landing/landing.min.js"></script>
+	<script src="@@path/assets/landing/landing.js"></script>
     
