--- a/src/partials/_contact-us-content.html
+++ b/src/partials/_contact-us-content.html
@@ -1,6 +1,6 @@
         <!-- End Header -->
         <main class="main">
-            <div class="page-header" style="background-image: url(@@path/assets/images/page-header/contact-us.jpg)">
+            <div class="page-header" style="background-image: url(@@path/assets/custom/images/contact-us.png)">
                 <h1 class="page-title font-weight-bold text-capitalize ls-l">Contact</h1>
             </div>
             <div class="page-content mt-10 pt-7">
@@ -83,7 +83,7 @@
 
                             <div class="store">
                                 <figure class="banner-radius">
-                                    <img src="@@path/assets/images/subpages/store-2.jpg" alt="store" width="280" height="280">
+                                    <img src="@@path/assets/custom/images/card-cluj.png" alt="store" width="280" height="280">
                                     <h4 class="overlay-visible">Cluj</h4>
                                     <div class="overlay overlay-transparent">
                                         <p>
@@ -95,7 +95,7 @@
                             </div>
                             <div class="store">
                                 <figure class="banner-radius">
-                                    <img src="@@path/assets/images/subpages/store-3.jpg" alt="store" width="280" height="280">
+                                    <img src="@@path/assets/custom/images/card-fagaras.png" alt="store" width="280" height="280">
                                     <h4 class="overlay-visible">Fagarasi</h4>
                                     <div class="overlay overlay-transparent">
                                         <p>
