--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -11,9 +11,9 @@
                         </h3>
                         <h1 class="banner-title text-white font-weight-bold ls-m appear-animate"
                             data-animation-options="{'name': 'fadeInUpShorter', 'delay': '.6s'}">
-                            Panouri Publicitare,
+                            Publicitate Outdoor
                             <br>
-                            Outdoor Advertising.
+                            prin Led Screen TV.
                         </h1>
                         <a class="btn-play btn-iframe text-white appear-animate" data-animation-options="{
                                     'name': 'zoomIn', 'delay': '1s'
