--- a/src/partials/_servicii-cluj-content.html
+++ b/src/partials/_servicii-cluj-content.html
@@ -1,10 +1,10 @@
 <main class="main">
     <div class="page-header pl-4 pr-4" style="background-image: url(@@path/assets/images/page-header/about-us.jpg)">
         <h3 class="page-subtitle font-weight-bold">
-            Outdoor Advertising
+            Outdoor Advertising, Publicitate
         </h3>
         <h1 class="page-title font-weight-bold lh-1 text-white text-capitalize">
-            Panou Publicitar LED in Cluj
+            Led Screen TV in Cluj
         </h1>
         <p class="page-desc text-white mb-0">
             Servicii de promovare prin panou LED situat langa VIVO Mall
@@ -67,7 +67,8 @@
                             VIVO Mall 
                         </h3>
                         <p class="section-desc text-grey">
-                            Panoului LED va expune clipul unui numar mare de clienti cu o vizibilitatea buna in orice moment al zilei.<br>
+                            Panoului LED va expune clipul unui numar mare de clienti cu o vizibilitatea buna in orice moment al zilei.
+                            <br>
                         </p>
                         <a href="/contact.html" 
                            class="btn btn-dark btn-link btn-underline ls-m">Cere Oferta<i class="d-icon-arrow-right"></i>
@@ -95,10 +96,10 @@
                     </div>
                     <div class="col-md-5 mb-4">
                         <h5 class="section-subtitle lh-2 ls-md font-weight-normal">
-                            Date Tehnice
+                            Support Media
                         </h5>
                         <h3 class="section-title lh-1 font-weight-bold">
-                            Support Media si Preturi    
+                            Date Tehnice    
                         </h3>
                         <p class="section-desc text-grey">
                             <ul>
@@ -112,10 +113,10 @@
                                     <strong>Frecventa</strong>: 1 difuzare la 6min, <strong>Minim 140/zi</strong>
                                 </li>
                                 <li>
-                                    <strong>Preturi</strong> incepand cu 500Euro/luna
+                                    <strong>Actualizare in timp real</strong>
                                 </li>
                             </ul>
-                            Spot-urile publicitare se pot actualiza in timp real, GRATUIT. 
+                            Nota: Schimbarea continutului media nu implica costuri suplimentare. 
                         </p>
                     </div>
                 </div>
