--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -87,6 +87,9 @@
                             <li>
                                 <a target="_blank" href="https://www.facebook.com/goscharismamedia">Facebook</a>
                             </li>
+                            <li>
+                                <a target="_blank" href="https://www.facebook.com/goscharismamedia">Instagram</a>
+                            </li>                            
                         </ul>
                     </div>
                     <!-- End Widget -->
