--- a/src/partials/_faq-head.html
+++ b/src/partials/_faq-head.html
@@ -1,10 +1,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-<title>Riode - Ultimate eCommerce Template</title>
 
-<meta name="keywords" content="HTML5 Template" />
-<meta name="description" content="Riode - Ultimate eCommerce Template">
-<meta name="author" content="D-THEMES">
+<title>@@title</title>
+
+<meta name="keywords" content="@@keywords" />
+<meta name="description" content="@@description">
+<meta name="author" content="WebsiteMarket">
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="@@path/assets/images/icons/favicon.png">
