--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -39,7 +39,7 @@
                             </li>
                             <li>
                                 <label>Email:</label>
-                                <a href="mailto:goscharisma.office@gmail.com">goscharisma.office@gmail.com</a>
+                                <a href="mailto:contact@charismamedia.ro">contact@charismamedia.ro</a>
                             </li>
                         </ul>
                     </div>
