--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -411,10 +411,9 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
                         <strong>Suprafata de expunere este de 12mp</strong>, o dimensiune care permite o afisare optima a tuturor elementelor grafice. 
                     </p>
                     <p>
-                        In ambele orase in case putem oferi acest serviciu (<strong>Cluj</strong>, <strong>Fagaras</strong>) Panourile LED sunt pozitionate 
+                        In ambele orase in care oferim acest serviciu (<strong>Cluj</strong>, <strong>Fagaras</strong>) Panourile LED sunt pozitionate 
                         in zone cu trafic intens ceea ce asigura un flux constant de vizionari.
                     </p>
-
                 </div>
             </div>
         </section>
