--- a/src/partials/_servicii-fagaras-scripts.html
+++ b/src/partials/_servicii-fagaras-scripts.html
@@ -26,8 +26,8 @@
     } ];
 
     // Map Initial Location
-    var initLatitude = 45.8425788697317;
-    var initLongitude = 24.972040881236293;
+    var initLatitude = 45.842904;
+    var initLongitude = 24.972094;
 
     // Map Extended Settings
     var mapSettings = {
