--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -2,10 +2,10 @@
     <div class="page-content">
         <section class="intro-section">
             <div class="intro-banner banner banner-fixed"
-                style="background-image: url(@@path/assets/landing/images/bg1.jpg); background-color: gray;background-repeat: no-repeat; background-position: 0px 0px;">
+                style="background-image: url(@@path/assets/custom/images/home-top-bg2.jpg); background-color: gray;background-repeat: no-repeat; background-position: 0px 0px;">
                 <div class="container">
                     <div class="banner-content">
-                        <h3 class="banner-subtitle mb-5 text-white ls-s appear-animate"
+                        <h3 class="banner-subtitle mb-5 text-primary ls-s appear-animate"
                             data-animation-options="{'name': 'fadeInUpShorter', 'delay': '.5s'}">
                             CharismaMedia
                         </h3>
@@ -15,7 +15,8 @@
                             <br>
                             prin Led Screen TV.
                         </h1>
-                        <a class="btn-play btn-iframe text-white appear-animate" data-animation-options="{
+                        <a  style="background-color: #0b80d2 !important;"
+                            class="btn-play btn-iframe text-white appear-animate" data-animation-options="{
                                     'name': 'zoomIn', 'delay': '1s'
                                 }" title="play" href="@@path/assets/custom/video/outdoor-advertising-fagaras.mp4">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -405,7 +406,7 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
                 <div class="row justify-content-center elements pb-2">
 
                     <p>
-                        Un material VIDEO fiind animat, <strong>atrage atentia</strong> si impactul informatiei asupra auduentei este superior comparativ cu un banner clasic. 
+                        Un material VIDEO fiind animat, <strong>atrage atentia</strong> si impactul informatiei asupra audientei este superior comparativ cu un banner clasic. 
                     </p>
                     <p>    
                         <strong>Suprafata de expunere este de 12mp</strong>, o dimensiune care permite o afisare optima a tuturor elementelor grafice. 
