Fagaras - Update Maps Data

--- a/src/partials/_servicii-fagaras-scripts.html
+++ b/src/partials/_servicii-fagaras-scripts.html
@@ -26,8 +26,8 @@
     } ];
 
     // Map Initial Location
-    var initLatitude = 45.842904;
-    var initLongitude = 24.972094;
+    var initLatitude = 45.84295670694788;
+    var initLongitude = 24.97226489460245;
 
     // Map Extended Settings
     var mapSettings = {
