--- a/src/partials/_servicii-fagaras-scripts.html
+++ b/src/partials/_servicii-fagaras-scripts.html
@@ -20,14 +20,14 @@
 
     // Map Markers
     var mapMarkers = [ {
-        address: "E68 Intersectie, Fagaras",
-        html: "<strong>CharismaMedia<\/strong><br>Panou LED E68 Intersectie, Fagaras",
+        address: "VIVO Mall, Cluj",
+        html: "<strong>CharismaMedia<\/strong><br>Panou LED VIVO Mall",
         popup: true
     } ];
 
     // Map Initial Location
-    var initLatitude = 45.84295670694788;
-    var initLongitude = 24.97226489460245;
+    var initLatitude = 46.750219798902506;
+    var initLongitude = 23.5337395200862;
 
     // Map Extended Settings
     var mapSettings = {
