--- a/src/partials/_servicii-fagaras-scripts.html
+++ b/src/partials/_servicii-fagaras-scripts.html
@@ -20,14 +20,14 @@
 
     // Map Markers
     var mapMarkers = [ {
-        address: "E68 Intersectie, Fagaras",
+        address: "Strada Nicolae Bălcescu 5, Făgăraș 505200",
         html: "<strong>CharismaMedia<\/strong><br>Panou LED E68 Intersectie, Fagaras",
         popup: true
     } ];
 
     // Map Initial Location
-    var initLatitude = 45.84295670694788;
-    var initLongitude = 24.97226489460245;
+    var initLatitude = 45.84296044395506;
+    var initLongitude = 24.972254165767;
 
     // Map Extended Settings
     var mapSettings = {
