--- a/src/partials/_contact-us-head.html
+++ b/src/partials/_contact-us-head.html
@@ -1,5 +1,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+<meta name="google-site-verification" content="wieVNG2dEv-RRdvI4fNII9m94mmUX2RBzr0mWVegKA4" />
+
+<link rel="canonical" href="https://charismamedia.ro/contact.html" />
 
 <title>@@title</title>
 
@@ -7,8 +10,10 @@
 <meta name="description" content="@@description">
 <meta name="author" content="WebsiteMarket">
 
+<link rel="canonical" href="https://charismamedia.ro/contact.html" />
+
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="@@path/assets/images/icons/favicon.png">
+<link rel="icon" type="image/png" href="@@path/assets/custom/images/favicon.png">
 
 <script>
     WebFontConfig = {
@@ -21,7 +26,6 @@
         s.parentNode.insertBefore( wf, s );
     } )( document );
 </script>
-
 
 <link rel="stylesheet" type="text/css" href="@@path/assets/vendor/fontawesome-free/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="@@path/assets/vendor/animate/animate.min.css">
