--- a/src/partials/_index-head.html
+++ b/src/partials/_index-head.html
@@ -1,5 +1,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+<meta name="google-site-verification" content="wieVNG2dEv-RRdvI4fNII9m94mmUX2RBzr0mWVegKA4" />
+
+<link rel="canonical" href="https://charismamedia.ro/" />
 
 <title>@@title</title>
 
@@ -8,7 +11,7 @@
 <meta name="author" content="WebsiteMarket">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="@@path/assets/images/icons/favicon.png">
+<link rel="icon" type="image/png" href="@@path/assets/custom/images/favicon.png">
 
 <script>
     WebFontConfig = {
