--- a/src/partials/_servicii-cluj-head.html
+++ b/src/partials/_servicii-cluj-head.html
@@ -2,6 +2,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta name="google-site-verification" content="wieVNG2dEv-RRdvI4fNII9m94mmUX2RBzr0mWVegKA4" />
 
+<link rel="canonical" href="https://charismamedia.ro/panou-publicitar-cluj.html" />
+
 <title>@@title</title>
 
 <meta name="keywords" content="@@keywords" />
