--- a/src/partials/_contact-us-content.html
+++ b/src/partials/_contact-us-content.html
@@ -1,7 +1,7 @@
         <!-- End Header -->
         <main class="main">
-            <div class="page-header" style="background-image: url(@@path/assets/custom/images/contact-us.png)">
-                <h1 class="page-title font-weight-bold text-capitalize ls-l">Contact</h1>
+            <div class="page-header" style="background-image: url(@@path/assets/custom/images/contact-us2.png)">
+                <h1 class="page-title font-weight-bold text-capitalize ls-l" style="color:black;">Contact</h1>
             </div>
             <div class="page-content mt-10 pt-7">
                 <section class="contact-section">
