--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -382,8 +382,9 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
                     <div>
                         <a href="/panou-publicitar-cluj.html"
                             class="btn btn-lg btn-rounded btn-dark btn-solid mr-xs-3 overflow-hidden">
-                            Cluj
+                            Cluj-Napoca
                         </a>
+                        &nbsp;
                         <a href="/panou-publicitar-fagaras.html"
                             class="btn btn-lg btn-rounded btn-dark btn-solid mr-xs-3 overflow-hidden">
                             Fagaras
