Update for LIVE

--- a/src/partials/_common-navigation-mobile.html
+++ b/src/partials/_common-navigation-mobile.html
@@ -10,7 +10,7 @@
                 <a href="/">Home</a>
             </li>
             <li>
-                <a href="/panou-publicitar-cluj.html">Cluj</a>
+                <a href="/panou-publicitar-cluj.html">Cluj-Napoca</a>
             </li>  
             <li>
                 <a href="/panou-publicitar-fagaras.html">Fagaras</a>
