--- a/src/partials/_contact-us-content.html
+++ b/src/partials/_contact-us-content.html
@@ -14,7 +14,7 @@
                                             Adresa
                                         </h4>
                                         <p>
-                                            <strong>CLUJ</strong>, Str. Eroilor 378, Floresti
+                                            <strong>Cluj-Napoca</strong>, Str. Eroilor 378, Floresti
                                         </p>
 
                                         <h4 class="mb-2 text-capitalize">
@@ -84,7 +84,7 @@
                             <div class="store">
                                 <figure class="banner-radius">
                                     <img src="@@path/assets/custom/images/card-cluj.png" alt="store" width="280" height="280">
-                                    <h4 class="overlay-visible">Cluj</h4>
+                                    <h4 class="overlay-visible">Cluj-Napoca</h4>
                                     <div class="overlay overlay-transparent">
                                         <p>
                                             <br />
@@ -96,7 +96,7 @@
                             <div class="store">
                                 <figure class="banner-radius">
                                     <img src="@@path/assets/custom/images/card-fagaras.png" alt="store" width="280" height="280">
-                                    <h4 class="overlay-visible">Fagarasi</h4>
+                                    <h4 class="overlay-visible">Fagaras</h4>
                                     <div class="overlay overlay-transparent">
                                         <p>
                                             <br />
