--- a/src/partials/_faq-content.html
+++ b/src/partials/_faq-content.html
@@ -93,7 +93,7 @@
                 <div class="row">
                     <div class="col-md-6 mt-10">
                         <h2 class="title pl-2 pr-2 ls-m">
-                            Servicii Publicitate Outdoor, Cluj
+                            Servicii Publicitate Outdoor, Cluj-Napoca
                         </h2>
                         <div class="accordion accordion-border accordion-boxed accordion-plus">
                             <div class="card">
