--- a/src/partials/_index-content.html
+++ b/src/partials/_index-content.html
@@ -37,7 +37,7 @@
                             'name': 'fadeInRightShorter', 'delay': '1.4s'
                         }">
                             Activam in 
-                            <a style="text-decoration: underline;" href="/panou-publicitar-cluj.html">Cluj</a> si 
+                            <a style="text-decoration: underline;" href="/panou-publicitar-cluj.html">Cluj-Napoca</a> si 
                             <a style="text-decoration: underline;" href="/panou-publicitar-fagaras.html">Fagaras</a>
                             <span class="d-block font-weight-normal text-left">
                                 (prezentare video)
@@ -376,7 +376,7 @@ c0.001,1.095,0.429,2.124,1.202,2.897L15.942,30.798z" />
                 <p class="text-grey ls-m mb-7 p-max-width appear-animate" data-animation-options="{
                     'name': 'fadeInUpShorter', 'delay': '.2s'
                 }">
-                    Serviciile noastre de Promovare Outdoor prin panou LED sunt disponibile in Cluj si Fagaras.  
+                    Serviciile noastre de Promovare Outdoor prin panou LED sunt disponibile in Cluj-Napoca si Fagaras.  
                 </p>
                 <nav class="demos-nav">
                     <div>
