--- a/src/partials/_servicii-cluj-content.html
+++ b/src/partials/_servicii-cluj-content.html
@@ -4,7 +4,7 @@
             Outdoor Advertising, Publicitate
         </h3>
         <h1 class="page-title font-weight-bold lh-1 text-white text-capitalize">
-            Led Screen TV in Cluj
+            Led Screen TV in Cluj-Napoca
         </h1>
         <p class="page-desc text-white mb-0">
             Servicii de promovare prin panou LED situat langa VIVO Mall
