--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -17,7 +17,7 @@
                             </h4>
                             <p>
                                 Oferta include consultanta, productie media in 
-                                <a style="color: white;" href="/panou-publicitar-cluj.html">Cluj</a> 
+                                <a style="color: white;" href="/panou-publicitar-cluj.html">Cluj-Napoca</a> 
                                 si <a style="color: white;" href="/panou-publicitar-fagaras.html">Fagaras</a> .
                             </p>
                         </div>
@@ -69,7 +69,7 @@
                         </h4>
                         <ul class="widget-body">
                             <li>
-                                <a href="/panou-publicitar-cluj.html">Cluj</a>
+                                <a href="/panou-publicitar-cluj.html">Cluj-Napoca</a>
                             </li>
                             <li>
                                 <a href="/panou-publicitar-fagaras.html">Fagaras</a>
