--- a/src/partials/_common-navigation.html
+++ b/src/partials/_common-navigation.html
@@ -35,7 +35,7 @@
                             <a href="/">Home</a>
                         </li>
                         <li>
-                            <a href="/panou-publicitar-cluj.html">Cluj</a>
+                            <a href="/panou-publicitar-cluj.html">Cluj-Napoca</a>
                         </li>
                         <li>
                             <a href="/panou-publicitar-fagaras.html">Fagaras</a>
