--- a/src/partials/_index-navigation.html
+++ b/src/partials/_index-navigation.html
@@ -24,7 +24,7 @@
                 <nav class="main-nav d-lg-block d-none">
                     <ul class="menu menu-active-underline">
                         <li>
-                            <a href="/panou-publicitar-cluj.html">Cluj</a>
+                            <a href="/panou-publicitar-cluj.html">Cluj-Napoca</a>
                         </li>
                         <li>
                             <a href="/panou-publicitar-fagaras.html">Fagaras</a>
