--- a/src/partials/_servicii-scripts.html
+++ b/src/partials/_servicii-scripts.html
@@ -20,7 +20,7 @@
 
     // Map Markers
     var mapMarkers = [ {
-        address: "VIVO Mall, Cluj",
+        address: "VIVO Mall, Cluj-Napoca",
         html: "<strong>CharismaMedia<\/strong><br>Panou LED VIVO Mall",
         popup: true
     } ];
