--- a/src/partials/_contact-us-content.html
+++ b/src/partials/_contact-us-content.html
@@ -14,7 +14,7 @@
                                             Adresa
                                         </h4>
                                         <p>
-                                            <strong>Cluj-Napoca</strong>, Str. Eroilor 378, Floresti
+                                            <strong>FAGARAS</strong>, NICOLAE BALCESCU, NR. 5
                                         </p>
 
                                         <h4 class="mb-2 text-capitalize">
