--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -88,7 +88,7 @@
                                 <a target="_blank" href="https://www.facebook.com/goscharismamedia">Facebook</a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.facebook.com/goscharismamedia">Instagram</a>
+                                <a target="_blank" href="https://www.instagram.com/charismamediadvertising">Instagram</a>
                             </li>                            
                         </ul>
                     </div>
